// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`methods of TTS class "GoogleTTS" > getAudioBuffer returns audio buffer 1`] = `
{
  "common": {
    "disk": {
      "no": null,
      "of": null,
    },
    "movementIndex": {
      "no": null,
      "of": null,
    },
    "track": {
      "no": null,
      "of": null,
    },
  },
  "format": {
    "bitrate": 64000,
    "codec": "MPEG 2 Layer 3",
    "codecProfile": "CBR",
    "container": "MPEG",
    "duration": 4.752,
    "hasAudio": true,
    "hasVideo": false,
    "lossless": false,
    "numberOfChannels": 1,
    "numberOfSamples": 114048,
    "sampleRate": 24000,
    "tagTypes": [],
    "trackInfo": [],
  },
  "native": {},
  "quality": {
    "warnings": [],
  },
}
`;

exports[`methods of TTS class "LingvaTTS" > getAudioBuffer returns audio buffer 1`] = `
{
  "common": {
    "disk": {
      "no": null,
      "of": null,
    },
    "movementIndex": {
      "no": null,
      "of": null,
    },
    "track": {
      "no": null,
      "of": null,
    },
  },
  "format": {
    "bitrate": 64000,
    "codec": "MPEG 2 Layer 3",
    "codecProfile": "CBR",
    "container": "MPEG",
    "duration": 4.56,
    "hasAudio": true,
    "hasVideo": false,
    "lossless": false,
    "numberOfChannels": 1,
    "numberOfSamples": 109440,
    "sampleRate": 24000,
    "tagTypes": [],
    "trackInfo": [],
  },
  "native": {},
  "quality": {
    "warnings": [],
  },
}
`;
